--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/drawer": "6.6.15",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.10.0",
     "expo": "~53.0.12",
     "expo-auth-session": "~6.2.0",
     "expo-location": "~18.1.5",
@@ -29,7 +30,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-toast-message": "^2.3.1"
+    "react-native-toast-message": "^2.3.1",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
